cluster/ct-k8sdenyname copy 23.yaml
apiVersion: templates.gatekeeper.sh/v1b^Ca1
kind: ConstraintTemplate
metadata:
  name: k8sdenyname23v2
spec:
  crd:
    spec:
      names:
        kind: K8sDenyName23v2
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            invalidName:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenynames
        violation[{"msg": msg}] {
          input.review.object.metadata.name == input.parameters.invalidName
          msg := sprintf("The name %v is not allowed", [input.parameters.invalidName])
        }
